grid gap added - inverted solved

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,15 +1,4 @@
-.card__list {
-    list-style-type: none;
-    display: grid;
-    justify-content: center;
-    border-radius: 25px;
-    grid-template-columns: repeat(auto-fit, 282px);
-    grid-gap: 20px 17px;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .card {
+    .card {
     display: flex;
     flex-direction: column;
     list-style: none;
