--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -2,6 +2,17 @@
   margin: 51px 0 0;
 }
 
+.cards__list {
+  list-style-type: none;
+  display: grid;
+  justify-content: center;
+  border-radius: 25px;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  margin: 0;
+}
+
 @media screen and (max-width: 628px) {
   .cards {
     margin: 36px 0 0;
