--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -20,7 +20,9 @@
     "description description";
   grid-template-columns: minmax(auto, 375px) auto;
   margin: 0;
+  padding: 0;
   align-items: baseline;
+  grid-gap: 7px 18px;
 }
 
 .profile__edit-button {
@@ -30,7 +32,7 @@
   grid-area: button;
   border: solid 1px;
   border-color: white;
-  margin: 0 0 0 10px;
+  margin: 0;
   padding: 0;
   opacity: 1;
   transition: opacity 0.5s;
@@ -77,7 +79,7 @@
   line-height: 22px;
   font-weight: 400;
   grid-area: description;
-  padding-top: 16px;
+  padding-top: 0;
   white-space: nowrap;
   max-width: 375px;
   overflow: hidden;
@@ -92,7 +94,6 @@
   }
 
   .profile__info {
-    gap: 10px;
     width: 100%;
     text-align: center;
     justify-content: center;
@@ -124,13 +125,13 @@
   }
 
   .profile__info {
-    gap: 10px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     min-width: 282px;
     max-height: 50px;
+    grid-gap: 14px 10px;
   }
 
   .profile__title {
